src/App.css
@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap'); 

*{box-sizing:border-box;}
body {
  font-family: 'Mochiy Pop P One', sans-serif;
  background-color: transparent;
  color: #234;
  margin:0; padding:0;
  display: grid;
  place-items: center;
  height: 100vh;
  cursor: pointer;
  max-height:100vh;
  overflow:hidden;
  text-align: center;
  font-size: clamp(2em, 18vw, 12em);
}

@media (orientation: landscape) {
  body {
    font-size: clamp(2em, 20vh, 12em);
  }
}
.blob {
  border-radius: 50%;
  padding: 0.3em 0;
  max-width: 5em;
  line-height: 1em;
  background-color: #bdd7ff;
  transform: rotate(5deg);
}

